--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -239,70 +239,77 @@ jobs:
   #     run: |
   #      echo 'Run automation tests'
 
-  deploy-on-non-prod-cluster:
+  # deploy-on-non-prod-cluster:
 
-    name: Deploy on Non PROD Cluster
-    runs-on: ubuntu-latest
-    # needs:
-    # - build-test-push-sign-image
+  #   name: Deploy on Non PROD Cluster
+  #   runs-on: ubuntu-latest
+  #   # needs:
+  #   # - build-test-push-sign-image
 
-    steps:
+  #   steps:
 
 
-    - name: Trigger workflow 'nonprod-vol-api-manual-cd.yaml'
-      # uses: actions/github-script@v6
-      # with:
-      #   script: |
-      #     await github.rest.actions.createWorkflowDispatch({
-      #       owner: context.repo.owner,
-      #       repo: 'dvsa-container-registry',
-      #       workflow_id: 'nonprod-vol-api-manual-cd.yaml',
-      #       ref: 'feature/AWSRESET1-514',
-      #       inputs: {
-      #         vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-      #       },
-      #     })
-        # wait-interval: 10
-      # if: github.ref == 'refs/heads/main'
-      # run: |
-      #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
-      run: |
-        gh workflow run 'CD NON-PROD VOL API' \
-          -R dvsa/dvsa-container-registry --ref feature/AWSRESET1-514 \
-          -f vol_api_image_tag=vol-api-7.4.33-alpine-fpm-ddea10a
-        # gh run watch -i1
-      env:
-        GITHUB_TOKEN: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
+  #   - name: Trigger workflow 'nonprod-vol-api-manual-cd.yaml'
+  #     # uses: actions/github-script@v6
+  #     # with:
+  #     #   script: |
+  #     #     await github.rest.actions.createWorkflowDispatch({
+  #     #       owner: context.repo.owner,
+  #     #       repo: 'dvsa-container-registry',
+  #     #       workflow_id: 'nonprod-vol-api-manual-cd.yaml',
+  #     #       ref: 'feature/AWSRESET1-514',
+  #     #       inputs: {
+  #     #         vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
+  #     #       },
+  #     #     })
+  #       # wait-interval: 10
+  #     # if: github.ref == 'refs/heads/main'
+  #     # run: |
+  #     #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
+  #     run: |
+  #       gh workflow run 'CD NON-PROD VOL API' \
+  #         -R dvsa/dvsa-container-registry --ref feature/AWSRESET1-514 \
+  #         -f vol_api_image_tag=vol-api-7.4.33-alpine-fpm-ddea10a
+  #       # gh run watch -i1
+  #     env:
+  #       GITHUB_TOKEN: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
 
-        # github-token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
-        # script: |
-        #   await github.rest.actions.createWorkflowDispatch({
-        #     owner: 'dvsa',
-        #     repo: 'dvsa-container-registry',
-        #     workflow_id: 'CD NON-PROD VOL API',
-        #     ref: 'feature/AWSRESET1-514',
-        #     inputs: {
-        #       vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-        #     },
-        #   });
-        # script: |
-        #   curl -L \
-        #     -X POST \
-        #     -H "Accept: application/vnd.github+json" \
-        #     -H "Authorization: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}" \
-        #     -H "X-GitHub-Api-Version: 2022-11-28" \
-        #     https://api.github.com/repos/dvsa/dvsa-container-registry/actions/workflows/nonprod-vol-api-manual-cd.yaml/dispatches \
-        #     -d '{"ref":"feature/AWSRESET1-514","inputs":{"vol_api_image_tag":"vol-api-7.4.33-alpine-fpm-ddea10a"}}'
-      #             # script: |
-      #   #   await github.rest.actions.createWorkflowDispatch({
-      #   #   owner: 'dvsa'
-      #   #   repo: 'dvsa-container-registry',
-      #   #   workflow_id: 'nonprod-vol-api-manual-cd.yaml',
-      #   #   ref: 'feature/AWSRESET1-514'
-      #   #   inputs: {
-      #   #     vol_api_image_tag: ${{ needs.build-test-push-sign-image.outputs.image_tag }}
-      #   #   }
-      #   #   })
+  #       # github-token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
+  #       # script: |
+  #       #   await github.rest.actions.createWorkflowDispatch({
+  #       #     owner: 'dvsa',
+  #       #     repo: 'dvsa-container-registry',
+  #       #     workflow_id: 'CD NON-PROD VOL API',
+  #       #     ref: 'feature/AWSRESET1-514',
+  #       #     inputs: {
+  #       #       vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
+  #       #     },
+  #       #   });
+  #       # script: |
+  #       #   curl -L \
+  #       #     -X POST \
+  #       #     -H "Accept: application/vnd.github+json" \
+  #       #     -H "Authorization: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}" \
+  #       #     -H "X-GitHub-Api-Version: 2022-11-28" \
+  #       #     https://api.github.com/repos/dvsa/dvsa-container-registry/actions/workflows/nonprod-vol-api-manual-cd.yaml/dispatches \
+  #       #     -d '{"ref":"feature/AWSRESET1-514","inputs":{"vol_api_image_tag":"vol-api-7.4.33-alpine-fpm-ddea10a"}}'
+  #     #             # script: |
+  #     #   #   await github.rest.actions.createWorkflowDispatch({
+  #     #   #   owner: 'dvsa'
+  #     #   #   repo: 'dvsa-container-registry',
+  #     #   #   workflow_id: 'nonprod-vol-api-manual-cd.yaml',
+  #     #   #   ref: 'feature/AWSRESET1-514'
+  #     #   #   inputs: {
+  #     #   #     vol_api_image_tag: ${{ needs.build-test-push-sign-image.outputs.image_tag }}
+  #     #   #   }
+  #     #   #   })
+
+    deploy-on-non-prod-cluster:
+      name: Deploy on Non Prod Cluster
+      # if: github.event_name == 'pull_request'
+      uses: ./.github/workflows/trigger-github-workflow.yaml
+      secrets:
+        github_token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
 
   # qa-artifact-approval:
 
